--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ body {
     bottom: 20px;
     left: 20px;
     margin: 0;
-    display: none;
+    opacity: 0;
 }
 
 .panel.active {
@@ -48,7 +48,8 @@ body {
 }
 
 .panel.active h3 {
-    display: block;
+    opacity: 1;
+    transition: opacity 0.3s ease-in 0.4s;
 }
 
 @media(max-width: 480px) {
