--- a/style.css
+++ b/style.css
@@ -9,15 +9,14 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 0;
     height: 100vh;
     overflow: hidden;
-}
+    margin: 0;
+  }
 
 .container {
     display: flex;
     width: 90vw;
-
 }
 
 .panel {
@@ -44,7 +43,60 @@ body {
 }
 
 .panel.active {
-    flex: 5;
+    flex-grow: 5;
+}
+
+.panel.active h3 {
+    opacity: 1;
+    transition: opacity 0.3s ease-in 0.4s;
+}
+@import url('https://fonts.googleapis.com/css?family=Muli&display=swap');
+
+*{
+    box-sizing:border-box;
+}
+
+body {
+    font-family: 'Muli', sans-serif;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    overflow: hidden;
+    margin: 0;
+  }
+
+.container {
+    display: flex;
+    width: 90vw;
+}
+
+.panel {
+    background-size: auto 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 80vh;
+    border-radius: 50px;
+    color: #fff;
+    cursor: pointer;
+    flex: 0.5;
+    margin: 10px;
+    position: relative;
+    transition: flex 0.7s ease-in;
+}
+
+.panel h3 {
+    font-size: 24px;
+    position: absolute;
+    bottom: 20px;
+    left: 20px;
+    margin: 0;
+    opacity: 0;
+}
+
+.panel.active {
+    flex-grow: 3;
+    max-width: 1200px;
 }
 
 .panel.active h3 {
